CMBSandbox4/src/objects/Bonus_Member__c.object
<CustomObject>
    <fields>
        <fullName>Billable_Hours__c</fullName>
        <label>Billable Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Biz_Dev_Points_1_100__c</fullName>
        <label>Biz Dev Points(1-100)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Bonus Members</relationshipLabel>
        <relationshipName>Bonus_Members</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Creativity_Points_1_100__c</fullName>
        <label>Creativity Points(1-100)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deadline_Points_1_100__c</fullName>
        <label>Deadline Points(1-100)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>General_Points_1_100__c</fullName>
        <label>General Points(1-100)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours_of_Pool__c</fullName>
        <formula>of_Pool__c *  Monthly_Bonus_Header__r.Billable_Hours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># of Pool</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Management_Points_1_100__c</fullName>
        <label>Management Points(1-100)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Month_End__c</fullName>
        <label>Month End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Month_Start__c</fullName>
        <label>Month Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Monthly_Bonus_Header__c</fullName>
        <label>Monthly Bonus Header</label>
        <referenceTo>Monthly_Bonus_Header__c</referenceTo>
        <relationshipLabel>Bonus Members</relationshipLabel>
        <relationshipName>Bonus_Members</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Unpaid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paid</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Points__c</fullName>
        <formula>Biz_Dev_Points_1_100__c  +  Creativity_Points_1_100__c  +  Deadline_Points_1_100__c  +  Management_Points_1_100__c  +  General_Points_1_100__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Points</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Pool__c</fullName>
        <label>% of Pool</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>of_pool_currency__c</fullName>
        <formula>of_Pool__c *  Monthly_Bonus_Header__r.Total_Pool_Amount_New__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>$ of pool</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Bonus Member</label>
    <nameField>
        <label>Bonus Member Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bonus Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>